# VirtualTaggerPlugin

./: CMakeLists.txt  README.md  VirtualTaggerPlugin.cpp  VirtualTaggerPlugin.h
